day1/112bis-spring-boot-advanced/app/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-demo
  labels:
    app.kubernetes.io/part-of: spring-demo
