day1/112bis-spring-boot-advanced/app/k8s/20-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: spring-demo
  labels:
    app: catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: catalog-service:1.0.0
          imagePullPolicy: IfNotPresent     # image construite directement dans Minikube
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              memory: 512Mi
          startupProbe:                      # Spring Boot peut mettre 10 à 40 s à démarrer
            httpGet:
              path: /actuator/health/liveness
              port: http
            periodSeconds: 2
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: catalog                              # => http://catalog:8080 depuis les autres Pods
  namespace: spring-demo
spec:
  type: ClusterIP
  selector:
    app: catalog
  ports:
    - name: http
      port: 8080
      targetPort: http
